@@ -9,6 +9,7 @@
         <item>Español</item>
         <item>简体中文</item>
         <item>Tiếng Việt</item>
+        <item>Slovenský</item>
     </string-array>
     <string-array name="language_values" translatable="false">
         <item>en</item>
@@ -18,6 +19,7 @@
         <item>es</item>
         <item>zh</item>
         <item>vi</item>
+        <item>sk</item>
     </string-array>
     <string-array name="theme_entries">
         <item>Dark</item>
